crates/cruster/tests/ui/missing_trait_with.stderr
error[E0277]: the trait bound `LoggingEntity: Entity` is not satisfied
  --> tests/ui/missing_trait_with.rs:32:21
   |
32 |     assert_entity::<LoggingEntity>();
   |                     ^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `Entity` is not implemented for `LoggingEntity`
  --> tests/ui/missing_trait_with.rs:19:1
   |
19 | struct LoggingEntity;
   | ^^^^^^^^^^^^^^^^^^^^
help: the trait `Entity` is implemented for `LoggingEntityWithTraits`
  --> tests/ui/missing_trait_with.rs:21:1
   |
21 | #[entity_impl(traits(LoggerTrait))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required by a bound in `assert_entity`
  --> tests/ui/missing_trait_with.rs:29:21
   |
29 | fn assert_entity<T: Entity>() {}
   |                     ^^^^^^ required by this bound in `assert_entity`
   = note: this error originates in the attribute macro `entity_impl` (in Nightly builds, run with -Z macro-backtrace for more info)
